--- a/Walkthought Tutorial/webapp/view/HelloDialog.fragment.xml
+++ b/Walkthought Tutorial/webapp/view/HelloDialog.fragment.xml
@@ -1,8 +1,16 @@
-
 <core:FragmentDefinition
-   xmlns="sap.m"
-   xmlns:core="sap.ui.core">
-   <Dialog
-      id="helloDialog"
-      title="Hello {/recipient/name}"/>
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core"
+>
+    <Dialog
+        id="helloDialog"
+        title="Hello {/recipient/name}"
+    >
+        <beginButton>
+            <Button
+                text="{i18n>dialogCloseButtonText}"
+                press=".onCloseDialog"
+            />
+        </beginButton>
+    </Dialog>
 </core:FragmentDefinition>
