--- a/Walkthought Tutorial/webapp/view/InvoiceList.view.xml
+++ b/Walkthought Tutorial/webapp/view/InvoiceList.view.xml
@@ -22,7 +22,8 @@
                         showMeasure: false
                     }
                 }"
-                numberUnit="{view>/currency}"/>
+                numberUnit="{view>/currency}"
+                numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"/>
         </items>
     </List>
 </mvc:View>
